PP-12826 Update CreateGatewayAccountResponse to record